Get footer logos appearing correct.

--- a/neahtta/static/css/base.css
+++ b/neahtta/static/css/base.css
@@ -990,3 +990,11 @@ table.miniparadigm .double-width {
 
 /* @group */
 
+/* For the logos in the bottom. */
+.partners .logo img {
+    max-height: 128px;
+}
+
+.partners .logo img.no-resize {
+    max-height: initial;
+}
