--- a/neahtta/static/css/detail.css
+++ b/neahtta/static/css/detail.css
@@ -1,4 +1,4 @@
-/* @override 
+/* @override
 	http://localhost:5000/static/css/detail.css
 	http://digitesting.oahpa.no/static/css/detail.css
 */
@@ -26,6 +26,18 @@
 
 .word_detail .meanings li {
     font-size: 120%;
+}
+
+/* Translation source CSS */
+/* Too much specificity, bite me. */
+.meanings li ul.sources li.entry_source {
+  /* smaller on search page */
+  font-size: 80%
+}
+.word_detail .meanings li ul.sources li.entry_source {
+  /* same size on detail page, but make the font less bold looking. */
+  font-size: 100%;
+  font-weight: 300;
 }
 
 .word_detail .meanings li {
@@ -67,7 +79,7 @@
 }
 
 .word_detail ul.possible_forms {
-	list-style-type: none; 
+	list-style-type: none;
 	margin-left: 0em;
 }
 
@@ -106,16 +118,16 @@
 	.word_detail .lexeme p.lead {
 		margin-bottom: .5em;
 	}
-	
+
 	.word_detail .meanings {
 		margin-left: 2.5em;
 	}
-	
+
 	/* Fix display of mini-paradigm for mobile width */
 	.word_detail .lexeme > div {
 		position: inherit;
 	}
-	
+
 	.word_detail .miniparadigm {
 		position: relative;
 		left: -10px;
@@ -128,18 +140,18 @@
         text-align: left;
         margin-left: 0px;
     }
-	
+
 	.word_detail .dl-horizontal dt {
     	float: left;
     	width: auto;
     	clear: none;
     	text-align: left;
 	}
-  
+
 	.word_detail .dl-horizontal dd {
 		margin-left: 11em;
 	}
-	
+
 	.word_detail form#neahttadigisanit input[type="text"] {
 		max-width: 8em;
 	}
@@ -152,13 +164,13 @@
 .word_detail .visible-phone dl.dl-horizontal.miniparadigm dd {
     width: 100%;
     overflow: word-wrap;
-    
+
 }
 
 .word_detail .visible-phone dl.dl-horizontal.miniparadigm dt {
     width: 100%;
     word-wrap: break-word;
     white-space: nowrap;
-    float: none;    
+    float: none;
     margin-top: .5em;
 }
