--- a/neahtta/static/css/itwewina.css
+++ b/neahtta/static/css/itwewina.css
@@ -189,3 +189,8 @@ cite.entry_source {
 i.icon-spin {
     animation: spin 1s linear infinite;
 }
+
+.recordings .loading-failed {
+    font-style: italic;
+    color: #666;
+}
