--- a/neahtta/templates/base.html
+++ b/neahtta/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <!-- iOS 7 only uses the last line -->
-    <meta name="viewport" content="initial-scale=1.0,width=device-width,user-scalable=no" />
+    <meta name="viewport" content="initial-scale=1.0,width=device-width" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <link rel="apple-touch-icon" href="/static/img/mobile_bookmark_icons/{{ app_short_name }}.png"/>  
